# ComfyUI-aki-v3

./: .gitignore  AGENTS.md  CLAUDE.md  comfyui_skill_utils.py  download_models.py  generate_video.py
.clinerules/: general.md
.github/: copilot-instructions.md
ComfyUI/: .gitignore
ComfyUI/comfy/: memory_management.py  model_management.py  model_patcher.py  ops.py  pinned_memory.py
ComfyUI/user/: comfyui.db  comfyui.db.bkp
agent-projects/: 2026-05-18_三项目能力选型总览.md  README.md
agent-projects/civitai-data-manager/: .gitignore
agent-projects/civitai-downloader/: .gitignore  README.md  download.py
agent-projects/comfyui-shared/: README.md  pyproject.toml
agent-projects/comfyui-shared/comfyui_shared/: __init__.py  client.py  json_utils.py
agent-projects/comfyui-test-harness/: README.md  requirements.txt
agent-projects/comfyui-test-instance/: ComfyUI-Environment-Launcher.vbs  README.md
agent-projects/lmstudio-comfyui-benchmark/: README.md
agent-projects/manga-anime-pipeline/: .gitignore  README.md  requirements-comfy.txt  requirements-detection.txt  requirements-director.txt
agent-projects/manga-panel-fixer/: README.md
agent-projects/manga-pipeline-reference/: README.md
agent-projects/manga-pipeline-reference/resources/reference-projects/ComfyUI-DeepSeek-OCR/: README.md  pyproject.toml  requirements.txt
agent-projects/manga-pipeline-reference/resources/reference-projects/ComfyUI-Florence2/: .gitignore  nodes.py  pyproject.toml  requirements.txt
agent-projects/manga-pipeline-reference/resources/reference-projects/ComfyUI-Florence2/model/: config.py  davit.py  model.py  processing.py  tokenizer.py
agent-skills/: README.md
agent-skills/comfyui/: README.md  (+3 more)
(+804 files in other folders)
