[project]
name = "comfyui-florence2"
description = "Nodes to use Florence2 VLM for image vision tasks: object detection, captioning, segmentation and ocr"
version = "1.1.0"
license = "MIT"
dependencies = ["tokenizers", "matplotlib"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-Florence2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-Florence2"
Icon = ""
